# python-exercises

./: .gitignore  README.md  flake.nix  pyproject.toml  treefmt.nix
.devcontainer/: devcontainer.json
.github/: dependabot.yaml
checks/pre-commit/: default.nix
exercises/apollonian-gaskets/: README.md  __init__.py  __main__.py
exercises/mandelbrot-fractal/: README.md  __init__.py  __main__.py
exercises/newton-fractal/: README.md  __init__.py  __main__.py  parallel.py
exercises/solar-sym/: README.md  __init__.py  __main__.py
exercises/ulam-spiral/: README.md  __init__.py  __main__.py
shells/poetry/: default.nix
