[tool.poetry]
name = "python-exercises"
version = "1.0"
description = "A set of Python exercises for mathematicans."
license = "MIT"
authors = ["ElliottSullingeFarrall <elliott.chalford@gmail.com>"]
readme = "README.md"
repository = "https://github.com/ElliottSullingeFarrall/python-exercises"
packages = [
  { from = "exercises", include = "apollonian-gaskets" },
  { from = "exercises", include = "mandelbrot-fractal" },
  { from = "exercises", include = "newton-fractal" },
  { from = "exercises", include = "solar-sym" },
  { from = "exercises", include = "ulam-spiral" },
]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.1.3"
matplotlib = "^3.9.2"
scipy = "^1.14.1"
sympy = "^1.13"
tqdm = "^4.66.5"
astroquery = "^0.4.7"
astropy = "^6.1.3"

[tool.poetry.group.dev.dependencies]
snakeviz = "^2.2.0"

[tool.poetry.scripts]
apollonian-gaskets = "apollonian-gaskets:run"
mandelbrot-fractal = "mandelbrot-fractal:run"
newton-fractal = "newton-fractal:run"
solar-sym = "solar-sym:run"
ulam-spiral = "ulam-spiral:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
